added two dots to images

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ The four actor-musicians were allowed only limited roles in the recording studio
     <div class="col-sm-4 sidenav">
       <div class="well">
         <p>Click On Image to Watch Video</p>
-        <a href="/videos/TheMonkees.mp4"><img src="/images/album.jpg"></a>
+        <a href="/videos/TheMonkees.mp4"><img src="../images/album.jpg"></a>
       </div>
       <div class="well">
         <p>ADS</p>
