--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="home.html">Home</a></li>
+        <li class="active"><a href="/">Home</a></li>
         <li><a href="bandmembers.html">Band Members</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="music.html">Music</a></li>
