--- a/home.html
+++ b/home.html
@@ -56,18 +56,15 @@ The four actor-musicians were allowed only limited roles in the recording studio
         <p>Click On Image to Watch Video</p>
         <a href="/videos/TheMonkees.mp4"><img src="/images/album.jpg"></a>
       </div>
-      <div class="well">
-        <p>ADS</p>
-      </div>
     </div>
   </div>
 </div>
 
 <footer class="container-fluid text-center" >
-  <p>Social Media</p>
+  <a href="mailto:themonkees@fakemail.com">E mail us</a>
   <div class="container">
   <div class="col-xs-6 col-sm-6 col-md-6">
-					
+					<p>Social Media</p>
 					<ul class="list-inline social-links">
 						<li><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
 						<li><a target="_blank" href="#"><i class="fa fa-linkedin"></i></a></li>
