--- a/music.html
+++ b/music.html
@@ -36,6 +36,36 @@
   </div>
 </nav>
 
+<div class="container-fluid">
+  <div class="row">
+ <div class="col-sm-6">
+      <div class="well">
+        <p>Listen to i am a believer</p>
+        <a href="/audio/ImABeliever.mp3"><img src="/images/cover2.png"></a>
+      </div>
+      <div class="well">
+        <p>listen to clarksville</p>
+        <a href="/audio/Clarksville.mp3"><img src="/images/cover.jpg"></a>
+      </div>
+     </div>
+      <div class="well">
+        <p>listen to Day Drean Believer</p>
+        <a href="/audio/DaydreamBeliever.mp3"><img src="/images/cover.jpg"></a>
+      </div>
+      <div class="row">
+      <div class="col-sm-6">
+      <div class="well">
+        <p>listen to stepping Stone</p>
+        <a href="/audio/SteppingStone.mp3"><img src="/images/cover3.jpg"></a>
+      </div>
+      </div>
+      </div>
+    </div> 
+  
+  
+  
+</div>
+
 <footer class="container-fluid text-center" >
   <p>Social Media</p>
   <div class="container">
@@ -47,7 +77,7 @@
 						<li><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
 						<li><a target="_blank" href="#"><i class="fa fa-pinterest"></i></a></li>
 					</ul>
-                    </div>
+          </div>
 				</div>
   
 </footer>
