--- a/gallery.html
+++ b/gallery.html
@@ -36,6 +36,54 @@
   </div>
 </nav>
 
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="/images/band.jpg" alt="together" width="1200" height="500">
+        <div class="carousel-caption">
+          <h3>Together</h3>
+          <p>We where young</p>
+        </div>      
+      </div>
+
+      <div class="item">
+        <img src="/images/cover3.jpg" alt="Chicago" width="1200" height="500">
+        <div class="carousel-caption">
+          <h3>Out and About</h3>
+          <p>Taking in the fresh air away from the music</p>
+        </div>      
+      </div>
+    
+      <div class="item">
+        <img src="/images/tour2.jpg" alt="Los Angeles" width="1200" height="500">
+        <div class="carousel-caption">
+          <h3>Saturday Gig</h3>
+          <p>We had a blast of a time playing in Carlow</p>
+        </div>      
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+</div>
+
+
+
 <footer class="container-fluid text-center" >
   <p>Social Media</p>
   <div class="container">
