--- a/tour.html
+++ b/tour.html
@@ -41,7 +41,7 @@
     <div class="col-sm-12 text-left"> 
       <h1>On Tour</h1>
     <center>
-   <img src="images/tour1.jpg" style="width:350px;">
+   <img src="front-end-project/images/tour1.jpg" style="width:350px;">
    </center>
       
       
