--- a/tour.html
+++ b/tour.html
@@ -40,9 +40,7 @@
   
     <div class="col-sm-12 text-left"> 
       <h1>On Tour</h1>
-    <center>
-   <img src="/front-end-project/images/tour1.jpg"><img src="/front-end-project/images/album.jpg">
-   </center>
+    <center><img src="/front-end-project/images/tour1.jpg"></center>
       
       
       <p>Pleased with their initial efforts, Columbia (over Kirshner's objections) planned to send the Monkees out to play live concerts. The massive success of the series—and its spin-off records—created intense pressure to mount a touring version of the group. Against the initial wishes of the producers, the band went out on the road and made their debut live performance in December 1966 in Hawaii.
