--- a/bandmembers.html
+++ b/bandmembers.html
@@ -43,21 +43,21 @@
     <div class="col-sm-6">
       <p><strong>Davy Jones</strong></p>
       <p>(30 December 1945 – 29 February 2012) best known as a member of the band the Monkees, and for starring in the TV series of the same name. His acting credits include a Tony-nominated role as the Artful Dodger in the original London and Broadway productions of Oliver!</p><br/>
-      <img src="front-end-project/images/djbandmember.jpg" alt="davyjones" width="255" height="255"> 
+      <img src="/front-end-project/images/djbandmember.jpg" alt="davyjones" width="255" height="255"> 
         
       
     </div>
     <div class="col-sm-6">
       <p><strong>Micky Donlez</strong></p><br>
       <p>(born March 8, 1945) is an American actor, musician, television director, radio personality and theater director, best known as a vocalist and drummer of the 1960s pop/rock band the Monkees</p>
-      <img src="/images/mdbandmember.jpg" alt="mickydolenz" width="255" height="255">
+      <img src="/front-end-project/images/mdbandmember.jpg" alt="mickydolenz" width="255" height="255"> 
     </div>
    </div>
    <div class="row">
     <div class="col-sm-6">
       <p><strong>Micheal Nesmith</strong></p>
     <p>(born December 30, 1942) is an American musician, songwriter, actor, producer, novelist, businessman, and philanthropist, best known as a member of the pop rock band the Monkees and co-star of the TV series The Monkees (1966–1968). Nesmith's songwriting credits include "Different Drum" (sung by Linda Ronstadt with the Stone Poneys). </p>
-      <img src="/images/mnbandmember.jpg" alt="michealnesmith" width="255" height="255">
+      <img src="/front-end-project/images/mnbandmember.jpg" alt="michealnesmith" width="255" height="255">
     </div>
     <div class="col-sm-6">
       <p><strong>Peter Tork</strong></p>
@@ -69,7 +69,7 @@ Years active	1964–present
 Labels	
 Colgems RCA Bell Arista Rhino Sire
 Associated acts.</p>
-      <img src="/images/ptbandmember.jpg" alt="Peter tork" width="255" height="255">
+      <img src="/front-end-project/images/ptbandmember.jpg" alt="Peter tork" width="255" height="255">
      </div>
     </div>
 
