--- a/bandmembers.html
+++ b/bandmembers.html
@@ -43,7 +43,7 @@
     <div class="col-sm-6">
       <p><strong>Davy Jones</strong></p>
       <p>(30 December 1945 – 29 February 2012) best known as a member of the band the Monkees, and for starring in the TV series of the same name. His acting credits include a Tony-nominated role as the Artful Dodger in the original London and Broadway productions of Oliver!</p><br/>
-      <img src="/front-end-project/images/djbandmember.jpg" alt="davyjones" width="255" height="255"> 
+      <img src="/front-end-project/images/djbandmember.jpg"> 
         
       
     </div>
