changed image paths

--- a/gallery.html
+++ b/gallery.html
@@ -47,7 +47,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="/images/band.jpg" alt="together" width="1200" height="500">
+        <img src="/front-end-project/images/band.jpg" alt="together" width="1200" height="500"> 
         <div class="carousel-caption">
           <h3>Together</h3>
           <p>We where young</p>
@@ -55,7 +55,7 @@
       </div>
 
       <div class="item">
-        <img src="/images/cover3.jpg" alt="Chicago" width="1200" height="500">
+        <img src="/front-end-project/images/cover3.jpg" alt="Chicago" width="1200" height="500">
         <div class="carousel-caption">
           <h3>Out and About</h3>
           <p>Taking in the fresh air away from the music</p>
@@ -63,7 +63,7 @@
       </div>
     
       <div class="item">
-        <img src="/images/tour2.jpg" alt="Los Angeles" width="1200" height="500">
+        <img src="/front-end-project/images/tour2.jpg" alt="Los Angeles" width="1200" height="500">
         <div class="carousel-caption">
           <h3>Saturday Gig</h3>
           <p>We had a blast of a time playing in Carlow</p>
