--- a/music.html
+++ b/music.html
@@ -41,22 +41,22 @@
  <div class="col-sm-6">
       <div class="well">
         <p>Listen to i am a believer</p>
-        <a href="/audio/ImABeliever.mp3"><img src="/images/cover2.png"></a>
+        <a href="/front-end-project/audio/ImABeliever.mp3"><img src="/front-end-project/images/cover2.png"></a>  
       </div>
       <div class="well">
         <p>listen to clarksville</p>
-        <a href="/audio/Clarksville.mp3"><img src="/images/cover.jpg"></a>
+        <a href="/front-end-project/audio/Clarksville.mp3"><img src="/front-end-project/images/cover.jpg"></a>
       </div>
      </div>
       <div class="well">
         <p>listen to Day Drean Believer</p>
-        <a href="/audio/DaydreamBeliever.mp3"><img src="/images/cover.jpg"></a>
+        <a href="/front-end-project/audio/DaydreamBeliever.mp3"><img src="/front-end-project/images/cover.jpg"></a>
       </div>
       <div class="row">
       <div class="col-sm-6">
       <div class="well">
         <p>listen to stepping Stone</p>
-        <a href="/audio/SteppingStone.mp3"><img src="/images/cover3.jpg"></a>
+        <a href="/front-end-project/audio/SteppingStone.mp3"><img src="/front-end-project/images/cover3.jpg"></a>
       </div>
       </div>
       </div>
